--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 spring.datasource.url=jdbc:mysql://localhost:3306/laptop_db
 spring.datasource.username=root
-spring.datasource.password=Devpatel@12
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
